# retro-go-s31

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md  README_S31.md  rg_tool.py  sdkconfig.defaults
.github/workflows/: ci.yml
components/espressif__esp_codec_dev/: CMakeLists.txt  Kconfig
components/retro-go/: CMakeLists.txt  config.h  rg_audio.c  rg_audio.h  rg_display.c  rg_display.h  rg_gui.c  rg_i2c.c  rg_i2c.h  rg_input.c  rg_localization.c  rg_network.c  rg_network.h  rg_storage.c  rg_system.c  rg_utils.c  translations.h
components/retro-go/drivers/audio/: bt_a2dp.c  es8389.c
components/retro-go/drivers/display/: rgb_lcd.h
components/retro-go/drivers/input/: rg_input_bluetooth.c  rg_input_bluetooth.h
components/retro-go/fonts/: STHeitiMedium14.c  fonts.h
components/retro-go/libs/netplay/: rg_netplay.c
components/retro-go/targets/esp32-s31-korvo-1/: config.h  env.py  sdkconfig
gbsp/components/gbsp-libretro/: gba_memory.c
gbsp/main/: main.c
launcher/main/: applications.c  gui.c
main/: CMakeLists.txt  idf_entry.c
release/sdcard-template/: README.txt
retro-core/components/gnuboy/: gnuboy.c  gnuboy.h
retro-core/components/pce-go/: pce-go.c
retro-core/components/snes9x/src/: snapshot.c
retro-core/main/: main_gbc.c  main_gw.c  main_nes.c
tools/: esptool_fast_wrapper.py  stage_rg_image.py
